Added new tone mapping curves

--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,9 @@ ME_Filmic Contrast.dctl
 ME_Hue Curve v1.0.dctl
 ME_Hue Curve v1.1.1.dctl
 ME_Hue Curve v1.1.dctl
+ME_Hue Curve v1.2
 ME_Ratio Shaper v1.0.dctl
+ME_Ratio Shaper v1.1
 S-curve Contrast.dctl
 ME_Trimmer.dctl
 Template.dctl
