--- a/.gitignore
+++ b/.gitignore
@@ -27,5 +27,6 @@ Old versions/desatch.dctl
 Desatch.dctl
 ME_Ratio Shaper v1.1.dctl
 ME_Hue Curve v1.2.dctl
-ME_Filmic Contrast v1.2
+ME_Hue Curve v1.3.1(WIP).dctl
 ME_Filmic Contrast v1.2.dctl
+ME_Filmic Contrast new curve.dctl
