depreciated Hue Curve V1.3

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ ME_Hue Curve v1.0.dctl
 ME_Hue Curve v1.1.1.dctl
 ME_Hue Curve v1.1.dctl
 ME_Hue Curve v1.2
+ME_Hue Curve v1.3.0
 ME_Ratio Shaper v1.0.dctl
 ME_Ratio Shaper v1.1
 S-curve Contrast.dctl
