--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-*.dctl linguist-language=C
+*.dctl text eol=lf linguist-language=C
